<resources>

    <string name="app_name">Wireless Charging Xposed</string>
    <string name="pref_category_sound">Sound</string>
    <string name="pref_category_vibration">Vibration</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_sound_on_charge_off">Do not play a notification when charging begins</string>
    <string name="pref_sound_on_charge_on">Play a notification when charging begins</string>
    <string name="pref_sound_on_charge_title">Sound on Charge</string>
    <string name="pref_sound_on_undock_off">Do not play a notification when device is removed from a wireless charger</string>
    <string name="pref_sound_on_undock_on">Play a notification when device is removed from a wireless charger</string>
    <string name="pref_sound_on_undock_title">Sound on Undock</string>
    <string name="pref_vibrate_title">Vibration</string>
    <string name="pref_vibrate_off">Do not vibrate when charging begins</string>
    <string name="pref_vibrate_on">Vibrate when charging begins</string>
    <string name="pref_custom_sound_title">Use Custom Sound</string>
    <string name="pref_custom_sound_off">Play the system\'s default wireless charging sound</string>
    <string name="pref_custom_sound_on">Play a custom notification sound</string>
    <string name="pref_custom_ringtone_charge_title">Charge Notification Sound</string>
    <string name="pref_custom_ringtone_undock_title">Undock Notification Sound</string>
    <string name="pref_wake_on_charge_title">Wake on Charge</string>
    <string name="pref_wake_on_charge_on">Wake the display when charging begins</string>
    <string name="pref_wake_on_charge_off">Do not wake the display when charging begins</string>
    <string name="pref_wake_on_undock_title">Wake on Undock</string>
    <string name="pref_wake_on_undock_on">Wake the display when device is removed from a wireless charger</string>
    <string name="pref_wake_on_undock_off">Do not wake the display when device is removed from a wireless charger</string>
</resources>
