<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        	android:title="@string/pref_category_sound">
        
	    <CheckBoxPreference
	            android:defaultValue="false"
	            android:key="pref_key_sound"
	            android:summaryOff="@string/pref_sound_on_charge_off"
	            android:summaryOn="@string/pref_sound_on_charge_on"
	            android:title="@string/pref_sound_on_charge_title" />
	    
	    <CheckBoxPreference
		        android:defaultValue="false"
		        android:key="pref_key_custom_sound"
		        android:summaryOff="@string/pref_custom_sound_off"
		        android:summaryOn="@string/pref_custom_sound_on"
		        android:title="@string/pref_custom_sound_title" 
		        android:dependency="pref_key_sound"/>
	    
	    <RingtonePreference
		        android:defaultValue="content://settings/system/notification_sound"
		        android:ringtoneType="notification"
		        android:showDefault="true"
		        android:showSilent="false"
		        android:key="pref_key_custom_ringtone"
		        android:title="@string/pref_custom_ringtone_charge_title"
		        android:dependency="pref_key_custom_sound"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_undock_sound"
            android:summaryOff="@string/pref_sound_on_undock_off"
            android:summaryOn="@string/pref_sound_on_undock_on"
            android:title="@string/pref_sound_on_undock_title" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="false"
            android:key="pref_key_custom_undock_ringtone"
            android:title="@string/pref_custom_ringtone_undock_title"
            android:dependency="pref_key_undock_sound"/>
    
    </PreferenceCategory>
    
    <PreferenceCategory
    		android:title="@string/pref_category_vibration">
	    
	    <CheckBoxPreference
	            android:defaultValue="false"
	            android:key="pref_key_vibrate"
	            android:summaryOff="@string/pref_vibrate_off"
	            android:summaryOn="@string/pref_vibrate_on"
	            android:title="@string/pref_vibrate_title" />

    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_category_display">
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_wake_on_charge"
            android:summaryOff="@string/pref_wake_on_charge_off"
            android:summaryOn="@string/pref_wake_on_charge_on"
            android:title="@string/pref_wake_on_charge_title"/>
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_wake_on_undock"
            android:summaryOff="@string/pref_wake_on_undock_off"
            android:summaryOn="@string/pref_wake_on_undock_on"
            android:title="@string/pref_wake_on_undock_title"/>
        
    </PreferenceCategory>
    
</PreferenceScreen>
